--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -14,18 +14,21 @@
 # limitations under the License.
 #
 
-on property:sys.post_boot.parsed=1
+# zygote need to be started after otapreopt which will be done on post-fs-data
+on zygote-start
     # Setup permission for powerHAL
     chown system system /dev/stune/top-app/schedtune.boost
     chown system system /dev/cpu_dma_latency
-    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
     chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
+    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
+
+on property:sys.post_boot.parsed=1
+    # Setup permission for powerHAL
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_trigger_count
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hist_memory
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_length
-    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
 
 on property:sys.boot_completed=1
     # Enable power setting and set sys.post_boot.parsed to 1
