--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -61,16 +61,18 @@ on property:sys.boot_completed=1
     write /sys/block/dm-2/queue/read_ahead_kb 128
     write /sys/block/dm-3/queue/read_ahead_kb 128
 
-# qcom-power triggers this property
-on property:sys.post_boot.parsed=1
+on post-fs-data
     # Setup permission for powerHAL
     chown system system /dev/stune/top-app/schedtune.boost
     chown system system /dev/cpu_dma_latency
-    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
     chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
+    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
+
+# qcom-power triggers this property
+on property:sys.boot_completed=1
+    # Setup permission for powerHAL
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_trigger_count
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hist_memory
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_length
-    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
