--- a/power-libperfmgr/android.hardware.power@1.2-service.xiaomi_sdm845-libperfmgr.rc
+++ b/power-libperfmgr/android.hardware.power@1.2-service.xiaomi_sdm845-libperfmgr.rc
@@ -2,3 +2,13 @@ service power-hal-1-2 /system/bin/hw/android.hardware.power@1.2-service.xiaomi_s
     class hal
     user system
     group system
+
+# restart powerHAL when framework died
+on property:init.svc.zygote=restarting
+   setprop powerhal.state 0
+   restart power-hal-1-2
+
+# restart powerHAL when cameraHAL died
+on property:init.svc.vendor.camera-provider-2-4=restarting && property:powerhal.state=VIDEO_ENCODE
+   setprop powerhal.state 0
+   restart power-hal-1-2
