--- a/power-libperfmgr/android.hardware.power@1.2-service.xiaomi_sdm845-libperfmgr.rc
+++ b/power-libperfmgr/android.hardware.power@1.2-service.xiaomi_sdm845-libperfmgr.rc
@@ -6,9 +6,16 @@ service power-hal-1-2 /system/bin/hw/android.hardware.power@1.2-service.xiaomi_s
 # restart powerHAL when framework died
 on property:init.svc.zygote=restarting && property:powerhal.state=*
    setprop powerhal.state ""
+   setprop powerhal.audio ""
    restart power-hal-1-2
 
 # restart powerHAL when cameraHAL died
 on property:init.svc.vendor.camera-provider-2-4=restarting && property:powerhal.state=VIDEO_ENCODE
    setprop powerhal.state ""
+   setprop powerhal.audio ""
+   restart power-hal-1-2
+
+# restart powerHAL when audioHAL died
+on property:init.svc.vendor.audio-hal-2-0=restarting && property:powerhal.audio=LOW_LATENCY
+   setprop powerhal.audio ""
    restart power-hal-1-2
