--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -14,6 +14,9 @@
 # limitations under the License.
 #
 
+on init
+    chown system system /dev/cpuset/kernel/cpus
+
 # zygote need to be started after otapreopt which will be done on post-fs-data
 on zygote-start
     # Setup permission for powerHAL
@@ -23,6 +26,18 @@ on zygote-start
     chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
     chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
     chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
+
+on boot
+    # Update DVR cpusets to boot-time values.
+    write /dev/cpuset/kernel/cpus 0-7
+    write /dev/cpuset/system/cpus 0-7
+    write /dev/cpuset/system/performance/cpus 0-7
+    write /dev/cpuset/system/background/cpus 0-7
+    write /dev/cpuset/system/cpus 0-7
+    write /dev/cpuset/application/cpus 0-7
+    write /dev/cpuset/application/performance/cpus 0-7
+    write /dev/cpuset/application/background/cpus 0-7
+    write /dev/cpuset/application/cpus 0-7
 
 on property:sys.post_boot.parsed=1
     # Setup permission for powerHAL
@@ -51,10 +66,11 @@ on property:sys.boot_completed=1
     write /dev/cpuset/system-background/cpus 0-3
 
     # Update DVR cpusets to runtime values.
-    write /dev/cpuset/kernel/cpus 0,1
-    write /dev/cpuset/system/performance/cpus 2
-    write /dev/cpuset/system/background/cpus 0
-    write /dev/cpuset/system/cpus 0,2
-    write /dev/cpuset/application/performance/cpus 3
-    write /dev/cpuset/application/background/cpus 1
-    write /dev/cpuset/application/cpus 1,3
+    # Update DVR cpusets to runtime values.
+    # Kernel cpuset will be apply on PowerHAL
+    write /dev/cpuset/system/performance/cpus 6-7
+    write /dev/cpuset/system/background/cpus 0-1
+    write /dev/cpuset/system/cpus 0-1,6-7
+    write /dev/cpuset/application/performance/cpus 4-5
+    write /dev/cpuset/application/background/cpus 0-1
+    write /dev/cpuset/application/cpus 0-1,4-5
