--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -14,25 +14,13 @@
 # limitations under the License.
 #
 
+on early-init
+    # Enable sched_boost
+    write /proc/sys/kernel/sched_boost 1
+
 on init
     chown system system /dev/cpuset/kernel/cpus
-
-# zygote need to be started after otapreopt which will be done on post-fs-data
-on zygote-start
-    # Setup permission for powerHAL
-    chown system system /dev/stune/top-app/schedtune.boost
-    chown system system /dev/cpu_dma_latency
-    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
-    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
-    chown system system /sys/class/kgsl/kgsl-3d0/force_rail_on
-    chown system system /sys/class/kgsl/kgsl-3d0/force_clk_on
-    chown system system /sys/class/kgsl/kgsl-3d0/idle_timer
-    chown system system /sys/kernel/debug/sched_features
-    chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
-    chown system system /sys/devices/platform/soc/soc:qcom,cpubw/devfreq/soc:qcom,cpubw/min_freq
-    chown system system /sys/class/devfreq/soc:qcom,llccbw/min_freq
-    chown system system /sys/class/devfreq/soc:qcom,l3-cpu0/min_freq
-    chown system system /sys/class/devfreq/soc:qcom,l3-cpu4/min_freq
+    chmod 0660 /dev/cpuset/kernel/cpus
 
 on boot
     # Update DVR cpusets to boot-time values.
@@ -81,6 +69,9 @@ on property:sys.boot_completed=1
     write /dev/cpuset/application/performance/cpus 4-5
     write /dev/cpuset/application/background/cpus 0-1
     write /dev/cpuset/application/cpus 0-1,4-5
+
+    # Disable sched_boost
+    write /proc/sys/kernel/sched_boost 0
 
     # Enable PowerHAL hint processing
     setprop vendor.powerhal.init 1
