--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -81,3 +81,6 @@ on property:sys.boot_completed=1
     write /dev/cpuset/application/performance/cpus 4-5
     write /dev/cpuset/application/background/cpus 0-1
     write /dev/cpuset/application/cpus 0-1,4-5
+
+    # Enable PowerHAL hint processing
+    setprop vendor.powerhal.init 1
