--- a/init.qcom.rc
+++ b/init.qcom.rc
@@ -1,5 +1,7 @@
 on init
-    mount none /sbin/chargeonlymode /sbin/charge bind
+    mount none /dev/null /vendor/bin/cnss_diag bind
+    mount none /dev/null /vendor/bin/ipacm-diag bind
+    mount none /sbin/chargeonlymode /sbin/charger bind
     mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio/audio_policy_configuration.xml bind
     mount none /system/lib64/hw/power.qcom.so /vendor/lib64/hw/power.qcom.so bind
     mount none /system/lib64/soundfx/libvolumelistener.so /vendor/lib64/soundfx/libvolumelistener.so bind
@@ -25,4 +27,5 @@ on property:persist.vendor.sys.ssr.enable_ramdumps=0
     stop vendor.ss_ramdump_local
 
 on property:sys.boot_completed=1
+    stop vendor.ipacm-diag
     stop vendor.ss_ramdump
